# learn_test

./: Kaukas.py  Korea_cars.py  cheaply.py  pyproject.toml
tests/: test_Kaukas.py  test_Korea_cars.py  test_addition.py  test_division.py  test_is_cheaply.py  test_multiplication.py  test_reverse.py  test_subtraction.py
