[tool.poetry]
name = "pythontest"
version = "0.1.0"
description = ""
authors = ["Denis <den.scherbinin2018@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
